--- a/CarBooking/CarBookingAPI/appsettings.json
+++ b/CarBooking/CarBookingAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:pall-test.database.windows.net,1433;Initial Catalog=SchoolExercise;Persist Security Info=False;User ID=dani_palli;Password=8&Cr9Q!yV3bg9pzy8Xcx7&KdiAUoym;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   }
 }
