--- a/CarBooking/CarBookingAPI/Dockerfile
+++ b/CarBooking/CarBookingAPI/Dockerfile
@@ -1,18 +1,22 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS base
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 5000
 ENV ASPNETCORE_URLS=http://*:5000
 
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
+WORKDIR /src
+COPY ["CarBookingAPI/CarBookingAPI.csproj", "CarBookingAPI/"]
+RUN dotnet restore "CarBookingAPI/CarBookingAPI.csproj"
+COPY . .
+WORKDIR "/src/CarBookingAPI"
+RUN dotnet build "CarBookingAPI.csproj" -c Release -o /app/build
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM build AS publish
+RUN dotnet publish "CarBookingAPI.csproj" -c Release -o /app/publish
+
+FROM base AS final
 WORKDIR /app
-COPY *.csproj .
-RUN dotnet restore
-COPY . ./
-RUN dotnet publish -c Release -o build
-
-
-FROM base AS runtime
-WORKDIR /app
-COPY --from=build /app/build ./
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "CarBookingAPI.dll"]
