--- a/CarBooking/CarBookingAPI/appsettings.json
+++ b/CarBooking/CarBookingAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost;Database=CarBooking;User Id=sa;Password=yourStrong(!)Password;"
   }
 }
