--- a/CarBooking/docker-compose.yml
+++ b/CarBooking/docker-compose.yml
@@ -3,16 +3,16 @@ version: '3.4'
 services:
   carbookingapi:
     environment:
-      ConnectionStrings__DefaultConnection: Server=db,1433;Database=CarBooking;User Id=sa;Password=yourStrong(!)Password;
-    image: dani_palli/carbookingapi
-    ports: 
+      ConnectionStrings__DefaultConnection: Server=mssqldb,1433;Database=CarBooking;User Id=sa;Password=yourStrong(!)Password;
+    image: danipalli/carbookingapi
+    ports:
       - 5000:5000
     depends_on:
       - mssqldb
   mssqldb:
-    image: mcr.microsoft.com/mssql/server
+    image: 'mcr.microsoft.com/mssql/server'
     environment:
-      SA_PASSWORD: "yourStrong(!)Password"
-      ACCEPT_EULA: "Y"
-     ports: 
-        - 1433:1433
+      SA_PASSWORD: 'yourStrong(!)Password'
+      ACCEPT_EULA: 'Y'
+    ports:
+      - 1433:1433
