--- a/CarBooking/CarBookingAPI/CarBookingAPI.csproj
+++ b/CarBooking/CarBookingAPI/CarBookingAPI.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Migrations.sql">
+    <None Update="Data.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
